make a project delete function with effects

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,6 +21,8 @@ services:
   
   mongo_backend:
     image: mongo
+    ports:
+      - "27017:27017"
     volumes:
       - mongo_backend_volume:/data/db
 
