--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
         "@types/lodash": "^4.14.198",
         "@types/swiper": "^6.0.0",
         "axios": "^1.5.0",
+        "framer-motion": "^11.5.6",
         "gh-pages": "^6.0.0",
         "gsap": "^3.12.2",
         "html-react-parser": "^4.2.1",
